--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -119,7 +119,8 @@ jobs:
     needs: get_changed_files
     runs-on: ubuntu-latest
     name: Check AdvProg_L4-SimpleAI
-    if: ${{ contains(needs.get_changed_files.outputs.abc, 'AdvProg_L4-SimpleAI') }}
+    if: ${{ contains(join(needs.get_changed_files.outputs.abc, ' '), 'AdvProg_L4-SimpleAI') }}
+
     steps:
       - uses: actions/checkout@v2
       - name: install package
